--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -1,10 +1,16 @@
 document.title = art \uc2dc\uc2a4\ud15c
+lbl.search = \uac80\uc0c9
 lbl.confirm = \ud655\uc778
 lbl.cancle = \ucde8\uc18c
 lbl.save = \uc800\uc7a5
 lbl.add = \ucd94\uac00
 
+lbl.blankStr = :::\uc120\ud0dd:::
+
 lbl.manageOption = \uc635\uc158\uad00\ub9ac
+lbl.addOption = \uc635\uc158\ucd94\uac00
+lbl.category = Category
+lbl.value = Value
 
 msg.noSession  = \ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect = \uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
