working in house

--- a/src/main/resources/prop/msg/msg_en.properties
+++ b/src/main/resources/prop/msg/msg_en.properties
@@ -1,1 +1,6 @@
-system.title = art system
+document.title=art system
+lbl.search=Search
+lbl.confirm=Confirm
+lbl.cancle=Cancel
+lbl.save=Save
+lbl.add=Add
