--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -1,17 +1,44 @@
-document.title = art \uc2dc\uc2a4\ud15c
-lbl.search = \uac80\uc0c9
-lbl.confirm = \ud655\uc778
-lbl.cancle = \ucde8\uc18c
-lbl.save = \uc800\uc7a5
-lbl.add = \ucd94\uac00
+document.title=art \uc2dc\uc2a4\ud15c
+lbl.search=\uac80\uc0c9
+lbl.confirm=\ud655\uc778
+lbl.cancle=\ucde8\uc18c
+lbl.save=\uc800\uc7a5
+lbl.add=\ucd94\uac00
 
-lbl.blankStr = :::\uc120\ud0dd:::
+lbl.code=\ucf54\ub4dc
+lbl.value=\uac12
+lbl.id=\uc544\uc774\ub514 
+lbl.blankStr=:::\uc120\ud0dd:::
+lbl.useYn=\uc0ac\uc6a9\uc5ec\ubd80
+lbl.description=\uc124\uba85
 
-lbl.manageOption = \uc635\uc158\uad00\ub9ac
-lbl.addOption = \uc635\uc158\ucd94\uac00
-lbl.category = Category
-lbl.value = Value
+lbl.manageOption=\uc635\uc158\uad00\ub9ac
+lbl.addOption=\uc635\uc158\ucd94\uac00
+lbl.option=\uc635\uc158
+lbl.category=\uce74\ud14c\uace0\ub9ac
+lbl.makeRule=\uc0dd\uc131\uaddc\uce59
+lbl.addCategory=\uce74\ud14c\uace0\ub9ac\ucd94\uac00
 
-msg.noSession  = \ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
-msg.notConnect = \uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
-msg.failProcess = \uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
+msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
+msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
+msg.failProcess=\uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
+msg.success=\uc131\uacf5\ud558\uc600\uc2b5\ub2c8\ub2e4.
+msg.execute=\ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+msg.success.exec=\uc131\uacf5\uc801\uc73c\ub85c \ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+msg.success.insert=\uc800\uc7a5\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+msg.success.update=\ubcc0\uacbd\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+msg.success.delete=\uc0ad\uc81c\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+msg.fail.insert=\uc800\uc7a5\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
+msg.fail.update=\ubcc0\uacbd\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
+msg.fail.delete=\uc0ad\uc81c\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
+msg.fail.poorParam=\uc694\uccad \uc815\ubcf4\uac00 \ucda9\ubd84\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
+msg.fail.execDao=SQL \uc2e4\ud589\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud558\uc600\uc2b5\ub2c8\ub2e4. 
+
+msg.valid.noSelector=\uc120\ud0dd\uc790\uac00 \uc9c0\uc815\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
+msg.valid.maxLength=\ucd5c\ub300 \uc785\ub825 \uae00\uc790\uc218\ub97c \ucd08\uacfc \ud558\uc600\uc2b5\ub2c8\ub2e4[{#1}].
+msg.valid.minLenth=\ucd5c\uc18c \uc785\ub825 \uae00\uc790\uc218\uac00 \uc785\ub825\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.[{#1}].
+msg.valid.noEmpty=\ud544\uc218 \uc785\ub825 \uc785\ub2c8\ub2e4.
+msg.valid.onlyEngNum=\uc601\ubb38\uc790\uac00 \uc785\ub825 \uac00\ub2a5\ud569\ub2c8\ub2e4(\uc22b\uc790\ud3ec\ud568).
+msg.valid.onlyNum=\uc22b\uc790\ub9cc \uc785\ub825 \uac00\ub2a5 \ud569\ub2c8\ub2e4.
+msg.valid.onlyEng=\uc601\ubb38\uc790\ub9cc \uc785\ub825 \uac00\ub2a5\ud569\ub2c8\ub2e4.
+msg.valid.cannotKor=\ud55c\uae00\uc740 \uc785\ub825 \ubd88\uac00\ub2a5\ud569\ub2c8\ub2e4.
