--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -4,6 +4,7 @@ lbl.confirm=\ud655\uc778
 lbl.cancle=\ucde8\uc18c
 lbl.save=\uc800\uc7a5
 lbl.add=\ucd94\uac00
+lbl.apply=\uc801\uc6a9
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
@@ -11,6 +12,8 @@ lbl.id=\uc544\uc774\ub514
 lbl.blankStr=:::\uc120\ud0dd:::
 lbl.useYn=\uc0ac\uc6a9\uc5ec\ubd80
 lbl.description=\uc124\uba85
+lbl.help=\ub3c4\uc6c0\ub9d0
+lbl.rule=\uaddc\uce59
 
 lbl.manageOption=\uc635\uc158\uad00\ub9ac
 lbl.addOption=\uc635\uc158\ucd94\uac00
@@ -18,6 +21,7 @@ lbl.option=\uc635\uc158
 lbl.category=\uce74\ud14c\uace0\ub9ac
 lbl.makeRule=\uc0dd\uc131\uaddc\uce59
 lbl.addCategory=\uce74\ud14c\uace0\ub9ac\ucd94\uac00
+lbl.makeRuleDetail=\uc0dd\uc131\uaddc\uce59 \uc0c1\uc138\uc124\uc815
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
