--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -22,9 +22,12 @@ lbl.category=\uce74\ud14c\uace0\ub9ac
 lbl.makeRule=\uc0dd\uc131\uaddc\uce59
 lbl.addCategory=\uce74\ud14c\uace0\ub9ac\ucd94\uac00
 lbl.makeRuleDetail=\uc0dd\uc131\uaddc\uce59 \uc0c1\uc138\uc124\uc815
+lbl.stupContent=\uc124\uc815\ub0b4\uc6a9
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
+msg.illegalAccess=\uc798\ubabb\ub41c \uc811\uadfc\uc785\ub2c8\ub2e4.
+msg.noData=\uac80\uc0c9\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
 msg.failProcess=\uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
 msg.success=\uc131\uacf5\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.execute=\ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
@@ -37,6 +40,9 @@ msg.fail.update=\ubcc0\uacbd\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.fail.delete=\uc0ad\uc81c\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.fail.poorParam=\uc694\uccad \uc815\ubcf4\uac00 \ucda9\ubd84\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 msg.fail.execDao=SQL \uc2e4\ud589\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud558\uc600\uc2b5\ub2c8\ub2e4. 
+
+
+msg.confirm.delete=\uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c? 
 
 msg.valid.noSelector=\uc120\ud0dd\uc790\uac00 \uc9c0\uc815\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
 msg.valid.maxLength=\ucd5c\ub300 \uc785\ub825 \uae00\uc790\uc218\ub97c \ucd08\uacfc \ud558\uc600\uc2b5\ub2c8\ub2e4[{#1}].
