--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -23,6 +23,7 @@ lbl.makeRule=\uc0dd\uc131\uaddc\uce59
 lbl.addCategory=\uce74\ud14c\uace0\ub9ac\ucd94\uac00
 lbl.makeRuleDetail=\uc0dd\uc131\uaddc\uce59 \uc0c1\uc138\uc124\uc815
 lbl.stupContent=\uc124\uc815\ub0b4\uc6a9
+lbl.searchResultCount={#1}\uac1c\uac00 \uac80\uc0c9\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
@@ -41,7 +42,6 @@ msg.fail.delete=\uc0ad\uc81c\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.fail.poorParam=\uc694\uccad \uc815\ubcf4\uac00 \ucda9\ubd84\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 msg.fail.execDao=SQL \uc2e4\ud589\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud558\uc600\uc2b5\ub2c8\ub2e4. 
 
-
 msg.confirm.delete=\uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c? 
 
 msg.valid.noSelector=\uc120\ud0dd\uc790\uac00 \uc9c0\uc815\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
@@ -52,3 +52,5 @@ msg.valid.onlyEngNum=\uc601\ubb38\uc790\uac00 \uc785\ub825 \uac00\ub2a5\ud569\ub
 msg.valid.onlyNum=\uc22b\uc790\ub9cc \uc785\ub825 \uac00\ub2a5 \ud569\ub2c8\ub2e4.
 msg.valid.onlyEng=\uc601\ubb38\uc790\ub9cc \uc785\ub825 \uac00\ub2a5\ud569\ub2c8\ub2e4.
 msg.valid.cannotKor=\ud55c\uae00\uc740 \uc785\ub825 \ubd88\uac00\ub2a5\ud569\ub2c8\ub2e4.
+
+msg.addOption=\uc635\uc158\uc744 \ucd94\uac00\ud558\uc138\uc694
