--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -5,6 +5,8 @@ lbl.cancle=\ucde8\uc18c
 lbl.save=\uc800\uc7a5
 lbl.add=\ucd94\uac00
 lbl.apply=\uc801\uc6a9
+lbl.addCodeGroup=\ucf54\ub4dc\uadf8\ub8f9\ucd94\uac00
+lbl.addCode=\ucf54\ub4dc\ucd94\uac00
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
@@ -24,6 +26,12 @@ lbl.addCategory=\uce74\ud14c\uace0\ub9ac\ucd94\uac00
 lbl.makeRuleDetail=\uc0dd\uc131\uaddc\uce59 \uc0c1\uc138\uc124\uc815
 lbl.stupContent=\uc124\uc815\ub0b4\uc6a9
 lbl.searchResultCount={#1}\uac1c\uac00 \uac80\uc0c9\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+
+lbl.codeValue=\ucf54\ub4dc\uac12
+lbl.codeGroup=\ucf54\ub4dc\uadf8\ub8f9
+lbl.codeType=\ucf54\ub4dc\ud615\ud0dc
+lbl.codeOrder=\ucf54\ub4dc\uc21c\ubc88
+lbl.noSelectCodeGroup=\ucf54\ub4dc\uadf8\ub8f9\uc774 \uc120\ud0dd\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
