developing code mamanger

--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -16,6 +16,7 @@ lbl.useYn=\uc0ac\uc6a9\uc5ec\ubd80
 lbl.description=\uc124\uba85
 lbl.help=\ub3c4\uc6c0\ub9d0
 lbl.rule=\uaddc\uce59
+lbl.etcInfo=\uae30\ud0c0\uc815\ubcf4
 
 lbl.manageOption=\uc635\uc158\uad00\ub9ac
 lbl.addOption=\uc635\uc158\ucd94\uac00
