--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -7,6 +7,8 @@ lbl.add=\ucd94\uac00
 lbl.apply=\uc801\uc6a9
 lbl.addCodeGroup=\ucf54\ub4dc\uadf8\ub8f9\ucd94\uac00
 lbl.addCode=\ucf54\ub4dc\ucd94\uac00
+lbl.up=\uc704\ub85c
+lbl.down=\uc544\ub798\ub85c
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
