Error message upgrade

--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -9,6 +9,7 @@ lbl.addCodeGroup=\ucf54\ub4dc\uadf8\ub8f9\ucd94\uac00
 lbl.addCode=\ucf54\ub4dc\ucd94\uac00
 lbl.up=\uc704\ub85c
 lbl.down=\uc544\ub798\ub85c
+lbl.delete=\uc0ad\uc81c
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
@@ -38,6 +39,7 @@ lbl.noSelectCodeGroup=\ucf54\ub4dc\uadf8\ub8f9\uc774 \uc120\ud0dd\ub418\uc9c0 \u
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
+msg.noSelectedData=\uc120\ud0dd\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
 msg.illegalAccess=\uc798\ubabb\ub41c \uc811\uadfc\uc785\ub2c8\ub2e4.
 msg.noData=\uac80\uc0c9\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
 msg.failProcess=\uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
@@ -50,8 +52,12 @@ msg.success.delete=\uc0ad\uc81c\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 msg.fail.insert=\uc800\uc7a5\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.fail.update=\ubcc0\uacbd\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.fail.delete=\uc0ad\uc81c\ud558\uc9c0 \ubabb\ud558\uc600\uc2b5\ub2c8\ub2e4.
+msg.fail.poorAuthoriry=\uad8c\ud55c\uc774 \ucda9\ubd84\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 msg.fail.poorParam=\uc694\uccad \uc815\ubcf4\uac00 \ucda9\ubd84\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
+msg.fail.uncollectLogin=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc815\ud655\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
+msg.fail.expiredPwdChange=\ube44\ubc00\ubc88\ud638 \ubcc0\uacbd\uae30\uac04\uc774 \uc9c0\ub0ac\uc2b5\ub2c8\ub2e4.
 msg.fail.execDao=SQL \uc2e4\ud589\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud558\uc600\uc2b5\ub2c8\ub2e4. 
+msg.fail.existSameData=\uc911\ubcf5 \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud569\ub2c8\ub2e4. 
 
 msg.confirm.delete=\uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c? 
 
