--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -58,8 +58,10 @@ msg.fail.uncollectLogin=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc815\ud655\ud558
 msg.fail.expiredPwdChange=\ube44\ubc00\ubc88\ud638 \ubcc0\uacbd\uae30\uac04\uc774 \uc9c0\ub0ac\uc2b5\ub2c8\ub2e4.
 msg.fail.execDao=SQL \uc2e4\ud589\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud558\uc600\uc2b5\ub2c8\ub2e4. 
 msg.fail.existSameData=\uc911\ubcf5 \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud569\ub2c8\ub2e4. 
+msg.fail.converHttpParam=\uc804\uc1a1 \ud30c\ub77c\ubbf8\ud130\uac00 \uc798\ubabb\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 
 msg.confirm.delete=\uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c? 
+msg.confirm.detele.codeGroup=<b>\ud558\uc704 \ucf54\ub4dc \ubaa9\ub85d\uae4c\uc9c0 \ubaa8\ub450 \uc0ad\uc81c \ub429\ub2c8\ub2e4</b><br>\ucf54\ub4dc\uadf8\ub8f9\uc744 \uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
 
 msg.valid.noSelector=\uc120\ud0dd\uc790\uac00 \uc9c0\uc815\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
 msg.valid.maxLength=\ucd5c\ub300 \uc785\ub825 \uae00\uc790\uc218\ub97c \ucd08\uacfc \ud558\uc600\uc2b5\ub2c8\ub2e4[{#1}].
