--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -45,6 +45,8 @@ lbl.userId=\uc0ac\uc6a9\uc790 \uc544\uc774\ub514
 lbl.loginId=\ub85c\uadf8\uc778 \uc544\uc774\ub514
 lbl.deptName=\ubd80\uc11c\uba85
 lbl.deptId=\ubd80\uc11c \uc544\uc774\ub514
+lbl.compName=\ud68c\uc0ac\uba85
+lbl.compCode=\ud68c\uc0ac\ucf54\ub4dc
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
