스크립트 스타일 교정중

--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -10,6 +10,11 @@ lbl.addCode=\ucf54\ub4dc\ucd94\uac00
 lbl.up=\uc704\ub85c
 lbl.down=\uc544\ub798\ub85c
 lbl.delete=\uc0ad\uc81c
+lbl.addItem=\ud56d\ubaa9\ucd94\uac00
+lbl.deleteItem=\ud56d\ubaa9\uc0ad\uc81c
+lbl.editName=\uc774\ub984\uc218\uc815
+lbl.close=\ub2eb\uae30
+lbl.origin=\uc6d0\ub798\ub300\ub85c
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
@@ -43,6 +48,8 @@ lbl.orgUserMng=\uc0ac\uc6a9\uc790 \uad00\ub9ac
 lbl.userName=\uc0ac\uc6a9\uc790\uba85
 lbl.userId=\uc0ac\uc6a9\uc790 \uc544\uc774\ub514
 lbl.loginId=\ub85c\uadf8\uc778 \uc544\uc774\ub514
+lbl.parentDeptName=\uc0c1\uc704\ubd80\uc11c\uba85
+lbl.deptCode=\ubd80\uc11c\ucf54\ub4dc
 lbl.deptName=\ubd80\uc11c\uba85
 lbl.deptId=\ubd80\uc11c \uc544\uc774\ub514
 lbl.compName=\ud68c\uc0ac\uba85
