--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -15,6 +15,7 @@ lbl.deleteItem=\ud56d\ubaa9\uc0ad\uc81c
 lbl.editName=\uc774\ub984\uc218\uc815
 lbl.close=\ub2eb\uae30
 lbl.origin=\uc6d0\ub798\ub300\ub85c
+lbl.checkDuplicated=\uc911\ubcf5\uccb4\ud06c
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
@@ -46,14 +47,17 @@ lbl.orgCompMng=\ud68c\uc0ac\uad00\ub9ac
 lbl.orgDeptMng=\ubd80\uc11c\uad00\ub9ac
 lbl.orgUserMng=\uc0ac\uc6a9\uc790 \uad00\ub9ac
 lbl.userName=\uc0ac\uc6a9\uc790\uba85
+lbl.userNickName=\ubcc4\uce6d
 lbl.userId=\uc0ac\uc6a9\uc790 \uc544\uc774\ub514
 lbl.loginId=\ub85c\uadf8\uc778 \uc544\uc774\ub514
+lbl.loginPwd=\ube44\ubc00\ubc88\ud638
 lbl.parentDeptName=\uc0c1\uc704\ubd80\uc11c\uba85
 lbl.deptCode=\ubd80\uc11c\ucf54\ub4dc
 lbl.deptName=\ubd80\uc11c\uba85
 lbl.deptId=\ubd80\uc11c \uc544\uc774\ub514
 lbl.compName=\ud68c\uc0ac\uba85
 lbl.compCode=\ud68c\uc0ac\ucf54\ub4dc
+lbl.userStatus=\uc7ac\uc9c1\uc0c1\ud0dc
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
@@ -91,3 +95,9 @@ msg.valid.onlyEng=\uc601\ubb38\uc790\ub9cc \uc785\ub825 \uac00\ub2a5\ud569\ub2c8
 msg.valid.cannotKor=\ud55c\uae00\uc740 \uc785\ub825 \ubd88\uac00\ub2a5\ud569\ub2c8\ub2e4.
 
 msg.addOption=\uc635\uc158\uc744 \ucd94\uac00\ud558\uc138\uc694
+msg.existDuplicateData=\uc911\ubcf5\ub41c \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud569\ub2c8\ub2e4.
+msg.canUse=\uc0ac\uc6a9\uac00\ub2a5\ud569\ub2c8\ub2e4.
+
+USER_STATUS_101=\uc7ac\uc9c1
+USER_STATUS_999=\ud1f4\uc9c1
+
