사용자에서 부서 정보 추가 수정중

--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -60,6 +60,7 @@ lbl.compCode=\ud68c\uc0ac\ucf54\ub4dc
 lbl.userStatus=\uc7ac\uc9c1\uc0c1\ud0dc
 lbl.userGrade=\uc9c1\uae09
 lbl.userRole=\uc9c1\ucc45
+lbl.ownDept=\uc18c\uc18d\ubd80\uc11c
 
 msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
 msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
