--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -62,11 +62,6 @@ lbl.userGrade=\uc9c1\uae09
 lbl.userRole=\uc9c1\ucc45
 lbl.ownDept=\uc18c\uc18d\ubd80\uc11c
 
-msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
-msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
-msg.noSelectedData=\uc120\ud0dd\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
-msg.illegalAccess=\uc798\ubabb\ub41c \uc811\uadfc\uc785\ub2c8\ub2e4.
-msg.noData=\uac80\uc0c9\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
 msg.failProcess=\uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
 msg.success=\uc131\uacf5\ud558\uc600\uc2b5\ub2c8\ub2e4.
 msg.execute=\ucc98\ub9ac\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
@@ -84,9 +79,11 @@ msg.fail.expiredPwdChange=\ube44\ubc00\ubc88\ud638 \ubcc0\uacbd\uae30\uac04\uc77
 msg.fail.execDao=SQL \uc2e4\ud589\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud558\uc600\uc2b5\ub2c8\ub2e4. 
 msg.fail.existSameData=\uc911\ubcf5 \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud569\ub2c8\ub2e4. 
 msg.fail.converHttpParam=\uc804\uc1a1 \ud30c\ub77c\ubbf8\ud130\uac00 \uc798\ubabb\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
+msg.fail.existBelongData=\uc5f0\uad00\ub41c \ub610\ub294 \ud558\uc704\uc5d0 \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud569\ub2c8\ub2e4.
+msg.fail.notFoundData=\uc694\uccad \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
 
 msg.confirm.delete=\uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c? 
-msg.confirm.detele.codeGroup=<b>\ud558\uc704 \ucf54\ub4dc \ubaa9\ub85d\uae4c\uc9c0 \ubaa8\ub450 \uc0ad\uc81c \ub429\ub2c8\ub2e4</b><br>\ucf54\ub4dc\uadf8\ub8f9\uc744 \uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
+msg.confirm.detele.includeSub=<b>\ud558\uc704 \uc815\ubcf4\uae4c\uc9c0 \ubaa8\ub450 \uc0ad\uc81c \ub429\ub2c8\ub2e4</b><br>\uc0ad\uc81c \ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
 
 msg.valid.noSelector=\uc120\ud0dd\uc790\uac00 \uc9c0\uc815\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
 msg.valid.maxLength=\ucd5c\ub300 \uc785\ub825 \uae00\uc790\uc218\ub97c \ucd08\uacfc \ud558\uc600\uc2b5\ub2c8\ub2e4[{#1}].
@@ -100,6 +97,13 @@ msg.valid.cannotKor=\ud55c\uae00\uc740 \uc785\ub825 \ubd88\uac00\ub2a5\ud569\ub2
 msg.addOption=\uc635\uc158\uc744 \ucd94\uac00\ud558\uc138\uc694
 msg.existDuplicateData=\uc911\ubcf5\ub41c \ub370\uc774\ud130\uac00 \uc874\uc7ac \ud569\ub2c8\ub2e4.
 msg.canUse=\uc0ac\uc6a9\uac00\ub2a5\ud569\ub2c8\ub2e4.
+
+msg.noSession=\ub85c\uadf8\uc778 \uc815\ubcf4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \ub2e4\uc2dc \ub85c\uadf8\uc778 \ud574\uc8fc\uc138\uc694
+msg.notConnect=\uc11c\ubc84\uc5d0 \uc811\uc18d \ud560\uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758\ud558\uc138\uc694
+msg.noSelectedData=\uc120\ud0dd\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
+msg.illegalAccess=\uc798\ubabb\ub41c \uc811\uadfc\uc785\ub2c8\ub2e4.
+msg.noData=\uac80\uc0c9\ub41c \ub370\uc774\ud130\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
+msg.noSelectedDeptData=\ubd80\uc11c\uac00 \uc120\ud0dd\ub418\uc9c0 \uc54a\uc558\uc2b5\ub2c8\ub2e4.
 
 USER_STATUS_101=\uc7ac\uc9c1
 USER_STATUS_999=\ud1f4\uc9c1
