권한설정 개발중

--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -16,6 +16,7 @@ lbl.editName=\uc774\ub984\uc218\uc815
 lbl.close=\ub2eb\uae30
 lbl.origin=\uc6d0\ub798\ub300\ub85c
 lbl.checkDuplicated=\uc911\ubcf5\uccb4\ud06c
+lbl.order=\uc21c\ubc88
 
 lbl.code=\ucf54\ub4dc
 lbl.value=\uac12
@@ -61,6 +62,21 @@ lbl.userStatus=\uc7ac\uc9c1\uc0c1\ud0dc
 lbl.userGrade=\uc9c1\uae09
 lbl.userRole=\uc9c1\ucc45
 lbl.ownDept=\uc18c\uc18d\ubd80\uc11c
+lbl.menuMng=\uba54\ub274\uad00\ub9ac
+lbl.menuId=\uba54\ub274\uc544\uc774\ub514
+lbl.menuName=\uba54\ub274\uba85
+lbl.menuUrl=\uba54\ub274URL
+lbl.parentMenuId=\uc0c1\uc704\uba54\ub274\uc544\uc774\ub514
+lbl.menuAuthMng=\uba54\ub274\uad8c\ud55c\uad00\ub9ac
+lbl.authGroup=\uad8c\ud55c\uadf8\ub8f9
+lbl.authGrant=\uad8c\ud55c\ubd80\uc5ec
+lbl.authGroupId=\uad8c\ud55c\uadf8\ub8f9\uc544\uc774\ub514
+lbl.authGroupName=\uad8c\ud55c\uadf8\ub8f9\uba85
+lbl.authGroupType=\uad8c\ud55c\uadf8\ub8f9\ud615\ud0dc
+lbl.parentAuthGroupId=\uc0c1\uc704\uad8c\ud55c\uadf8\ub8f9\uc544\uc774\ub514
+lbl.authGrantId=\uad8c\ud55c\ubd80\uc5ec\uc544\uc774\ub514
+lbl.authGrantType=\uad8c\ud55c\ubd80\uc5ec\ud615\ud0dc
+lbl.authAssignId=\uad8c\ud55c\ubd80\uc5ec\uc790\uc544\uc774\ub514
 
 msg.failProcess=\uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
 msg.success=\uc131\uacf5\ud558\uc600\uc2b5\ub2c8\ub2e4.
@@ -107,4 +123,6 @@ msg.noSelectedDeptData=\ubd80\uc11c\uac00 \uc120\ud0dd\ub418\uc9c0 \uc54a\uc558\
 
 USER_STATUS_101=\uc7ac\uc9c1
 USER_STATUS_999=\ud1f4\uc9c1
+AUTH_GROUP_TYPE_DIRECTORY=\ub514\ub809\ud1a0\ub9ac
+AUTH_GROUP_TYPE_AUTHGROUP=\uad8c\ud55c\uadf8\ub8f9
 
