공통 코드 활용 및 권한 할당 로직 개발중

--- a/src/main/resources/prop/msg/msg_ko.properties
+++ b/src/main/resources/prop/msg/msg_ko.properties
@@ -70,13 +70,15 @@ lbl.parentMenuId=\uc0c1\uc704\uba54\ub274\uc544\uc774\ub514
 lbl.menuAuthMng=\uba54\ub274\uad8c\ud55c\uad00\ub9ac
 lbl.authGroup=\uad8c\ud55c\uadf8\ub8f9
 lbl.authGrant=\uad8c\ud55c\ubd80\uc5ec
+lbl.authGrantTarget=\uad8c\ud55c\uc124\uc815\ub300\uc0c1
 lbl.authGroupId=\uad8c\ud55c\uadf8\ub8f9\uc544\uc774\ub514
 lbl.authGroupName=\uad8c\ud55c\uadf8\ub8f9\uba85
 lbl.authGroupType=\uad8c\ud55c\uadf8\ub8f9\ud615\ud0dc
 lbl.parentAuthGroupId=\uc0c1\uc704\uad8c\ud55c\uadf8\ub8f9\uc544\uc774\ub514
-lbl.authGrantId=\uad8c\ud55c\ubd80\uc5ec\uc544\uc774\ub514
-lbl.authGrantType=\uad8c\ud55c\ubd80\uc5ec\ud615\ud0dc
+lbl.authMemberId=\uad8c\ud55c\ubd80\uc5ec\uc790
+lbl.authAssignType=\uad8c\ud55c\ubd80\uc5ec\ud615\ud0dc
 lbl.authAssignId=\uad8c\ud55c\ubd80\uc5ec\uc790\uc544\uc774\ub514
+lbl.authAssignName=\uad8c\ud55c\ubd80\uc5ec\uc790\uba85
 
 msg.failProcess=\uc694\uccad\ud558\uc2e0 \uc791\uc5c5 \ucc98\ub9ac\uc911 \uc5d0\ub7ec\uac00 \ubc1c\uc0dd \ud588\uc2b5\ub2c8\ub2e4. \uad00\ub9ac\uc790\uc5d0\uac8c \ubb38\uc758 \ud558\uc138\uc694
 msg.success=\uc131\uacf5\ud558\uc600\uc2b5\ub2c8\ub2e4.
@@ -125,4 +127,8 @@ USER_STATUS_101=\uc7ac\uc9c1
 USER_STATUS_999=\ud1f4\uc9c1
 AUTH_GROUP_TYPE_DIRECTORY=\ub514\ub809\ud1a0\ub9ac
 AUTH_GROUP_TYPE_AUTHGROUP=\uad8c\ud55c\uadf8\ub8f9
+AUTH_ASSIGN_USER=\uc0ac\uc6a9\uc790
+AUTH_ASSIGN_DEPT=\ubd80\uc11c
+AUTH_ASSIGN_ROLE=\uc9c1\ucc45
+AUTH_ASSIGN_GRADE=\uc9c1\uae09
 
